--- a/packages/web-app/src/styles/_variables.scss
+++ b/packages/web-app/src/styles/_variables.scss
@@ -41,7 +41,7 @@ $color-borders: #dadce0;
 :root {
   // Color/Background
   --color-background: #{$color-white};
-  --color-background-secondary: #f4f4f5;
+  --color-background-secondary: #F1F1F1;
   --color-background-shade: #e4e4e5;
   --color-background-light: #ffffff;
 
