--- a/packages/web-app/src/styles/index.scss
+++ b/packages/web-app/src/styles/index.scss
@@ -33,6 +33,10 @@ ul {
   padding: 0;
 }
 
+input {
+  color: unset;
+}
+
 a {
   color: var(--color-text);
   text-decoration: none;
@@ -48,15 +52,21 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 1.5rem;
+  font-size: 3rem;
+  font-weight: 700;
 
   @media (min-width: 927px) {
-    font-size: 3rem;
+    font-size: 4rem;
   }
 }
 
 h2 {
+  font-size: 2.5rem;
+  font-weight: 700;
 
+  @media (min-width: 927px) {
+    font-size: 3rem;
+  }
 }
 
 h3 {
